# dj-blog

./: .gitignore  pyproject.toml
blog/: feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  search.html  share.html
blog/templates/blog/post/includes/: comment_form.html
core/: settings.py  urls.py
