[project]
name = "blog-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-taggit>=6.1.0",
    "markdown>=3.9",
    "psycopg[binary]>=3.2.10",
    "python-decouple>=3.8",
    "ruff>=0.12.11",
]
